Moved previous about page to the home page and created a different about page.

--- a/src/index.html
+++ b/src/index.html
@@ -37,13 +37,33 @@
             </a>
         </nav>
 
-        <!-- about page -->
-        <section id = "about" class="active">
-            <div class="section-main centered courier-new luminescent-white">
-                <div class="nowrap">Nice to meet you.</div>
+        <!-- home(index) page -->
+        <section id = "home" class="active">
+            <div class="section-main courier-new luminescent-white">
+                <div>Nice to meet you.</div>
                 I'm Irene, a
                 <div class="typed-text-container">
-                    <div class="typed-text nowrap" style="--word-count: 18;">Software Developer</div>
+                    <div class="typed-text" style="--word-count: 18;">Software Developer</div>
+                </div>
+            </div>
+        </section>
+
+        <!-- about page -->
+        <section id = "about">
+            <div class="courier-new luminescent-white font-larger-500 fluctuating-fragments">
+                <div class="frag-big"></div>
+                <div class="frag-med"></div>
+                <div class="frag-small"></div>
+                <div class="text">
+                    I'm currently working towards a degree specializing in Computer Science 
+                    at the University of Alberta and am set to graduate next year.
+                    During my academic journey, I've spent my time learning about 
+                    software design, algorithms, and artificial intelligence.
+                    I thrive in collaborative settings; 
+                    I believe that the greatest work is accomplished through collective effort of many.
+                    Besides coding, I read, play games, sew, and bake in my spare time. 
+                    Mainly, I love to learn and create things, which is why I'm drawn to programming.
+                    I'm excited to direct my passion and knowledge into solving problems and explore new horizons.
                 </div>
             </div>
         </section>
@@ -54,7 +74,7 @@
                 <canvas></canvas>
             </div>
 
-            <div class = "section-main centered luminescent-white poiret">
+            <div class = "section-main luminescent-white poiret">
                 <ul>
                     <li>Python</li>
                     <li>C/C++</li>
@@ -141,15 +161,15 @@
             <ul class="times-new-roman">
                 <li>
                     <i class="fa fa-github" aria-hidden="true"></i>
-                    <p class="centered">IreneRSun</p>
+                    <p>IreneRSun</p>
                 </li>
                 <li>
                     <i class="fa fa-phone" aria-hidden="true"></i>
-                    <p class="centered">587-357-1506</p>
+                    <p>587-357-1506</p>
                 </li>
                 <li>
                     <i class="fa fa-envelope" aria-hidden="true"></i>
-                    <p class="centered">irene.rsun
+                    <p>irene.rsun
                         @gmail.com</p>
                 </li>
             </ul>
