Removed skill wheel and replaced it with a cluster.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <canvas></canvas>
             </div>
 
-            <div class = "section-main luminescent-white poiret">
+            <div class = "luminescent-white poiret">
                 <ul>
                     <li>Python</li>
                     <li>C/C++</li>
