Updated about and project text content.

--- a/index.html
+++ b/index.html
@@ -55,15 +55,18 @@
                 <div class="frag-med"></div>
                 <div class="frag-small"></div>
                 <div class="text">
-                    I'm currently working towards a degree specializing in Computer Science 
+                    I am currently working towards a degree specializing in Computer Science 
                     at the University of Alberta and am set to graduate next year.
                     During my academic journey, I've spent my time learning about 
                     software design, algorithms, and artificial intelligence.
-                    I thrive in collaborative settings; 
-                    I believe that the greatest work is accomplished through collective effort of many.
+                    <br/><br/>
+                    I thrive in collaborative settings; as the saying goes, many hands make light work.
+                    <br/><br/>
                     Besides coding, I read, play games, sew, and bake in my spare time. 
                     Mainly, I love to learn and create things, which is why I'm drawn to programming.
-                    I'm excited to direct my passion and knowledge into solving problems and explore new horizons.
+                    <br/><br/>
+                    Moving forward, I am excited to direct my passion and knowledge into solving problems 
+                    and explore new horizons.
                 </div>
             </div>
         </section>
@@ -106,8 +109,9 @@
                         <div class="content poiret">
                             <h2>Bug Tracker</h2>
                             <p>
-                                This bug tracking website is a personal project I worked on over the summer.
-                                It uses the ASP.NET Core framework and C#.
+                                Coded using the ASP.NET Core framework and following an MVC design pattern,
+                                this bug tracking web application offers a streamlined solution to 
+                                handle issues that crop up during post-product release.
                             </p>
                             <a href="https://github.com/IreneRSun/BugTracker" style="--color: #a093ff;">Check It Out</a>
                         </div>
@@ -122,7 +126,8 @@
                         <div class="content poiret">
                             <h2>Weather Web App</h2>
                             <p>
-                                This unique weather web application uses HTML, CSS, and Javascript to visually tell the weather.
+                                This unique weather web application uses HTML, CSS, and Javascript
+                                to visually play the weather in a game-like interface.
                             </p>
                             <a href="https://github.com/IreneRSun/CatInTheCity" style="--color: #fcb69f;">Check It Out</a>
                         </div>
@@ -137,8 +142,9 @@
                         <div class="content poiret">
                             <h2>QR Mobile App</h2>
                             <p>
-                                This is a mobile Android game where users scan QR codes competitively.
-                                This was a group project made using Android Studio.
+                                This group project was a collaborative project designed in Android Studio.
+                                In this mobile Android game, users scan QR codes and 
+                                compete with other players in the leaderboard.
                             </p>
                             <a href="https://github.com/CMPUT301W23T09/QRHunter" style="--color: #6ebc18;">Check It Out</a>
                         </div>
