Added rotating conic gradient border to skills.

--- a/index.html
+++ b/index.html
@@ -79,21 +79,51 @@
 
             <div class = "luminescent-white poiret">
                 <ul>
-                    <li>Python</li>
-                    <li>C/C++</li>
-                    <li>C#</li>
-                    <li>Java</li>
-                    <li>Javascript</li>
-                    <li>Julia</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>SQL</li>
-                    <li>MongoDB</li>
-                    <li>Firebase Firestore</li>
-                    <li>ASP.NET Core</li>
-                    <li>Object Oriented Programming</li>
-                    <li>Data Structures</li>
-                    <li>Algorithms</li>
+                    <li>
+                        <span>Python</span>
+                    </li>
+                    <li>
+                        <span>C/C++</span>
+                    </li>
+                    <li>
+                        <span>C#</span>
+                    </li>
+                    <li>
+                        <span>Java</span>
+                    </li>
+                    <li>
+                        <span>Javascript</span>
+                    </li>
+                    <li>
+                        <span>Julia</span>
+                    </li>
+                    <li>
+                        <span>HTML</span>
+                    </li>
+                    <li>
+                        <span>CSS</span>
+                    </li>
+                    <li>
+                        <span>SQL</span>
+                    </li>
+                    <li>
+                        <span>MongoDB</span>
+                    </li>
+                    <li>
+                        <span>Firebase Firestore</span>
+                    </li>
+                    <li>
+                        <span>ASP.NET Core</span>
+                    </li>
+                    <li>
+                        <span>Object Oriented Programming</span>
+                    </li>
+                    <li>
+                        <span>Data Structures</span>
+                    </li>
+                    <li>
+                        <span>Algorithms</span>
+                    </li>
                 </ul>
             </div>
         </section>
