Adjusted element position for non-mobile screens, adjusted colors.

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     </div>
                 </div>
     
-                <div class = "project" style = "--color-1: #f5f5f5; --color-2: #554b68;">
+                <div class = "project" style = "--color-1: #f5f5f5; --color-2: #4d4b68;">
                     <div class = "node">
                         <img src = "assets/WeatherApp.png" />
                         <h2>Weather Web App</h2>
@@ -163,7 +163,7 @@
                     </div>
                 </div>
     
-                <div class = "project" style = "--color-1: #f5f5f5; --color-2: #634b68;">
+                <div class = "project" style = "--color-1: #f5f5f5; --color-2: #4d4b68;">
                     <div class = "node">
                         <img src = "assets/QRHunter.png" />
                         <h2>QR Hunter</h2>
