Changed hover effect of about section to a scroll effect, altered some coloring.

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <h1 class = "section-title">My Projects</h1>
 
             <div id = "projects-container">
-                <div class = "project" style = "--color-1: #f5f5f5; --color-2: #4d4b68;">
+                <div class = "project" style = "--i:1;">
                     <div class = "node">
                         <img src = "assets/BugTracker.png" />
                         <h2>Bug Tracker</h2>
@@ -148,7 +148,7 @@
                     </div>
                 </div>
     
-                <div class = "project" style = "--color-1: #f5f5f5; --color-2: #4d4b68;">
+                <div class = "project" style = "--i:2;">
                     <div class = "node">
                         <img src = "assets/WeatherApp.png" />
                         <h2>Weather Web App</h2>
@@ -163,7 +163,7 @@
                     </div>
                 </div>
     
-                <div class = "project" style = "--color-1: #f5f5f5; --color-2: #4d4b68;">
+                <div class = "project" style = "--i:3;">
                     <div class = "node">
                         <img src = "assets/QRHunter.png" />
                         <h2>QR Hunter</h2>
@@ -189,7 +189,7 @@
         </section>
 
         <!-- contact page -->
-        <section id = "contact">
+        <section id = "contacts">
 
             <h1 class = "section-title">Contact Me</h1>
 
