--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         <h2>Weather Web App</h2>
                             <p>
                                 This unique weather web application uses HTML, CSS, and Javascript
-                                to visually play the weather in a game-like interside.
+                                to visually tell the weather.
                             </p>
                         <a href="https://github.com/IreneRSun/CatInTheCity">Check It Out</a>
                     </div>
