--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     Mainly, I love to learn and create things, which is why I'm drawn to programming.
                     <br/><br/>
                     Moving forward, I am excited to direct my passion and knowledge into solving problems 
-                    and explore new horizons.
+                    and exploring new horizons.
                 </div>
             </div>
 
