Fixed skill carousel sizing issue on larger screens.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     During my academic journey, I've spent my time learning about 
                     software design, algorithms, and artificial intelligence.
                     <br/><br/>
-                    I thrive in collaborative settings; as the saying goes, many hands make light work.
+                    I enjoy collaborating with others to achieve success in project objectives.
                     <br/><br/>
                     Besides coding, I read, play games, sew, and bake in my spare time. 
                     Mainly, I love to learn and create things, which is why I'm drawn to programming.
