--- a/index.html
+++ b/index.html
@@ -45,15 +45,17 @@
                     I am currently working towards a degree specializing in Computer Science 
                     at the University of Alberta and am set to graduate next year.
                     During my academic journey, I've spent my time learning about 
-                    software design, algorithms, and artificial intelligence.
+                    software design, algorithms, and artificial intelligence, firmly believing in the 
+                    transformative power of teamwork to drive innovation, enhance productivity, and achieve collective success.
                     <br/><br/>
-                    I enjoy collaborating with others to achieve success in project objectives.
+                    Besides coding, I have a diverse set of interests.
+                    I'm an avid reader, enjoy playing games, find solace in sewing, and take pleasure in the art of baking.
                     <br/><br/>
-                    Besides coding, I read, play games, sew, and bake in my spare time. 
-                    Mainly, I love to learn and create things, which is why I'm drawn to programming.
+                    These hobbies provide a balance to my technical pursuits and allow me to explore my creative side. 
+                    What ties all these interests together is my deep passion for learning and my innate drive to create, 
+                    making programming an ideal medium for me to channel my curiosity and creativity into tangible projects and solutions.
                     <br/><br/>
-                    Moving forward, I am excited to direct my passion and knowledge into solving problems 
-                    and exploring new horizons.
+                    Moving forward, I am enthusiastic about channeling my passion and expertise towards tackling new challenges.
                 </div>
             </div>
 
