Updated content and added style changes.

--- a/index.html
+++ b/index.html
@@ -46,30 +46,32 @@
                 <div class="profile-pic">
                     <img src = "assets/ProfilePhoto.png" />
                 </div>
-                <div class="profile-name" data-aos="fade-right" data-aos-duration="3000">
+                <div class="profile-name" data-aos="fade-right" data-aos-duration="1000">
                     Irene Sun
                 </div>
             </div>
             <!-- about -->
-            <div class="card-stack" data-aos="flip-left">
-                <div class="card-stack-body">
-                    Nice to meet you.
-                    I'm Irene, a Software Developer.
-                    <br/><br/>
-                    I am currently working towards a degree specializing in Computer Science 
-                    at the University of Alberta and am set to graduate next year.
-                    During my academic journey, I've spent my time learning about 
-                    software design, algorithms, and artificial intelligence, firmly believing in the 
-                    transformative power of teamwork to drive innovation, enhance productivity, and achieve collective success.
-                    <br/><br/>
-                    Besides coding, I have a diverse set of interests.
-                    I'm an avid reader, enjoy playing games, find solace in sewing, and take pleasure in the art of baking.
-                    <br/><br/>
-                    These hobbies provide a balance to my technical pursuits and allow me to explore my creative side. 
-                    What ties all these interests together is my deep passion for learning and my innate drive to create, 
-                    making programming an ideal medium for me to channel my curiosity and creativity into tangible projects and solutions.
-                    <br/><br/>
-                    Moving forward, I am enthusiastic about channeling my passion and expertise towards tackling new challenges.
+            <div class="card-stack-container" data-aos="fade-left" data-aos-duration="1000">
+                <div class="card-stack">
+                    <p class="card-stack-body">
+                        Nice to meet you.
+                        I'm Irene, a Software Developer.
+                        <br/><br/>
+                        I am currently working towards a degree specializing in Computer Science 
+                        at the University of Alberta and am set to graduate next year.
+                        During my academic journey, I've spent my time learning about 
+                        software design, algorithms, and artificial intelligence, firmly believing in the 
+                        transformative power of teamwork to drive innovation, enhance productivity, and achieve collective success.
+                        <br/><br/>
+                        Besides coding, I have a diverse set of interests.
+                        I'm an avid reader, enjoy playing games, find solace in sewing, and take pleasure in the art of baking.
+                        <br/><br/>
+                        These hobbies provide a balance to my technical pursuits and allow me to explore my creative side. 
+                        What ties all these interests together is my deep passion for learning and my innate drive to create, 
+                        making programming an ideal medium for me to channel my curiosity and creativity into tangible projects and solutions.
+                        <br/><br/>
+                        Moving forward, I am enthusiastic about channeling my passion and expertise towards tackling new challenges.
+                    </p>
                 </div>
             </div>
         </section>
@@ -187,33 +189,48 @@
                     <li class="project-card" style="--i: 1;">
                         <div class="project-card-body bg-primary h-72">
                             <h2>Bug Tracker</h2>
-                            <p>
-                                Coded using the ASP.NET Core framework and following an MVC design pattern,
-                                this bug tracking web application offers a streamlined solution to 
-                                handle issues that crop up during post-product release.
-                            </p>
-                            <a href="https://github.com/IreneRSun/BugTracker">Check It Out</a>
+                            <div class="project-info">
+                                <div class="project-desc">
+                                    <p>
+                                        Coded using the ASP.NET Core framework and following an MVC design pattern,
+                                        this bug tracking web application offers a streamlined solution to 
+                                        handle issues that crop up during post-product release.
+                                    </p>
+                                    <a href="https://github.com/IreneRSun/BugTracker" class="project-link">Check It Out</a>
+                                </div>
+                                <img src="assets/Projects/BugTracker.png" class="project-img" />
+                            </div>
                         </div>
                     </li>
                     <li class="project-card" style="--i: 2;">
                         <div class="project-card-body bg-secondary h-72">
                             <h2>Weather Web App</h2>
-                            <p>
-                                This unique weather web application uses HTML, CSS, and Javascript
-                                to visually tell the weather.
-                            </p>
-                            <a href="https://github.com/IreneRSun/CatInTheCity">Check It Out</a>
+                            <div class="project-info">
+                                <div class="project-desc">
+                                    <p>
+                                        This unique weather web application uses HTML, CSS, and Javascript
+                                        to visualize the weather forecast.
+                                    </p>
+                                    <a href="https://github.com/IreneRSun/CatInTheCity" class="project-link">Check It Out</a>
+                                </div>
+                                <img src="assets/Projects/WeatherApp.png" class="project-img" />
+                            </div>
                         </div>
                     </li>
                     <li class="project-card" style="--i: 3;">
                         <div class="project-card-body bg-accent h-72">
                             <h2>QR Hunter</h2>
-                            <p>
-                                This group project was a collaborative project designed in Android Studio.
-                                In this mobile Android game, users scan QR codes and 
-                                compete with other players in the leaderboard.
-                            </p>
-                            <a href="https://github.com/CMPUT301W23T09/QRHunter">Check It Out</a>
+                            <div class="project-info">
+                                <div class="project-desc">
+                                    <p>
+                                        This group project was a collaborative project designed in Android Studio.
+                                        In this mobile Android game, users scan QR codes and 
+                                        compete with other players in the leaderboard.
+                                    </p>
+                                    <a href="https://github.com/CMPUT301W23T09/QRHunter" class="project-link">Check It Out</a>
+                                </div>
+                                <img src="assets/Projects/QRHunter.png" class="project-img" />
+                            </div>
                         </div>
                     </li>
                 </ul>
