Updated portfolio content and adjusted styling for consistency.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <body>
         <!-- menu -->
+        <input type="checkbox" id="menu-selector" hidden />
         <div class="menu">
             <button class="menu-btn">
                 <img src="assets/FloralDiamond.svg" />
@@ -46,12 +47,12 @@
                 <div class="profile-pic">
                     <img src = "assets/ProfilePhoto.png" />
                 </div>
-                <div class="profile-name" data-aos="fade-right" data-aos-duration="1000">
+                <div class="profile-name" data-aos="fade-right" data-aos-duration="3000">
                     Irene Sun
                 </div>
             </div>
             <!-- about -->
-            <div class="card-stack-container" data-aos="fade-left" data-aos-duration="1000">
+            <div class="card-stack-container" data-aos="fade-left" data-aos-duration="3000">
                 <div class="card-stack">
                     <p class="card-stack-body">
                         Nice to meet you.
@@ -59,18 +60,14 @@
                         <br/><br/>
                         I am currently working towards a degree specializing in Computer Science 
                         at the University of Alberta and am set to graduate next year.
-                        During my academic journey, I've spent my time learning about 
-                        software design, algorithms, and artificial intelligence, firmly believing in the 
-                        transformative power of teamwork to drive innovation, enhance productivity, and achieve collective success.
+                        During my academic journey, I've spent my time developing my skills in 
+                        software design, algorithms, and artificial intelligence.
                         <br/><br/>
-                        Besides coding, I have a diverse set of interests.
-                        I'm an avid reader, enjoy playing games, find solace in sewing, and take pleasure in the art of baking.
-                        <br/><br/>
-                        These hobbies provide a balance to my technical pursuits and allow me to explore my creative side. 
-                        What ties all these interests together is my deep passion for learning and my innate drive to create, 
-                        making programming an ideal medium for me to channel my curiosity and creativity into tangible projects and solutions.
-                        <br/><br/>
-                        Moving forward, I am enthusiastic about channeling my passion and expertise towards tackling new challenges.
+                        I am driven and adaptable, capable of working in both collaborative team settings
+                        and individually. 
+                        Moreover, I am passionate about continuous personal growth and 
+                        dedicated to expanding my knowledge base in an ever-evolving landscape.
+                        Being results-driven, I channel my passions and abilities into tangible projects and solutions.
                     </p>
                 </div>
             </div>
@@ -188,6 +185,24 @@
                 <ul class="project-cards">
                     <li class="project-card" style="--i: 1;">
                         <div class="project-card-body bg-primary h-72">
+                            <h2>Talent Gift Website</h2>
+                            <div class="project-info">
+                                <div class="project-desc">
+                                    <p>
+                                        Created together with a team for a client, 
+                                        this MVP aims to help organizations thrive by connecting managers and their employees. 
+                                        Using this platform, users can take a survey and receive actionable insights.
+                                        The app uses React, TypeScript, NodeJS, and PostgreSQL to make this vision a reality.
+                                    </p>
+                                    <a href="https://cmput401.ca/projects/ef43276a-aa85-4ab8-8359-50760dac8519" class="project-link">More Details</a>
+                                    <a href="http://[2605:fd00:4:1001:f816:3eff:fe61:d5c8]/" class="project-link">Check Out The Website</a>
+                                </div>
+                                <img src="assets/Projects/TalentGift.png" class="project-img" />
+                            </div>
+                        </div>
+                    </li>
+                    <li class="project-card" style="--i: 2;">
+                        <div class="project-card-body bg-primary h-72">
                             <h2>Bug Tracker</h2>
                             <div class="project-info">
                                 <div class="project-desc">
@@ -202,7 +217,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="project-card" style="--i: 2;">
+                    <li class="project-card" style="--i: 3;">
                         <div class="project-card-body bg-secondary h-72">
                             <h2>Weather Web App</h2>
                             <div class="project-info">
@@ -217,7 +232,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="project-card" style="--i: 3;">
+                    <li class="project-card" style="--i: 4;">
                         <div class="project-card-body bg-accent h-72">
                             <h2>QR Hunter</h2>
                             <div class="project-info">
@@ -259,6 +274,9 @@
                         </a>
                         <a href="https://github.com/IreneRSun">
                             <img width="50" height="50" src="https://img.icons8.com/sf-ultralight/50/F2E9E4/github.png" alt="github"/>
+                        </a>
+                        <a href="https://www.linkedin.com/in/irene-sun-84325028b/">
+                            <img width="50" height="50" src="https://img.icons8.com/sf-ultralight/50/FFFFFF/linkedin.png" alt="linkedin"/>
                         </a>
                     </div>
                 </div>
