Made contact links darken on hover.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     Irene Sun
                 </h2>
             </div>
-            <!-- about -->
+            <!-- about me -->
             <div class="card-stack-container">
                 <div class="card-stack">
                     <p class="card-stack-body">
@@ -59,7 +59,7 @@
                         I am currently working towards a degree specializing in Computer Science 
                         at the University of Alberta and am set to graduate next year.
                         During my academic journey, I've spent my time developing my skills in 
-                        software design, algorithms, and artificial intelligence.
+                        software development, algorithms, and artificial intelligence.
                         <br/><br/>
                         I am driven and adaptable, capable of working in both collaborative team settings
                         and individually. 
@@ -176,7 +176,7 @@
             </div>
         </section>
 
-        <!-- projects, transform with rotate -->
+        <!-- projects, add skills used in each project -->
         <section id="projects">
             <h1 class="section-title">My Projects</h1>
             <div class="project-card-container">
